# rules_docker_compose_test

./: BUILD.bazel  CODEOWNERS  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  docker_compose_test.patch  repositories.bzl  setup.bzl  toolchains.bzl
.github/workflows/: ci.yml  create_release.yml
docker_compose/: docker_compose_test.bzl  docker_compose_test.sh  test_container_entrypoint.sh
docker_compose_test/: BUILD  docker_compose_test.bzl  docker_compose_test.sh  multi_platform.bzl  test_container_entrypoint.sh
examples/: .bazelrc  MODULE.bazel  WORKSPACE  WORKSPACE.bazel  maven_install.json
examples/external-image/: BUILD  docker-compose.yml
examples/external-image-test/: BUILD  docker-compose.yml
examples/go-test-image-test/: BUILD.bazel  another_test.go  docker-compose.yml  example_test.go
examples/go-test-image-test-with-platforms/: BUILD.bazel  another_test.go  docker-compose.yml  example_test.go
examples/junit-image-test/: BUILD  HelloTest.java  docker-compose.yml
examples/locally-built-image/: BUILD  docker-compose.yml
examples/locally-built-image-test/: BUILD  docker-compose.yml
examples/locally-built-image-with-junit-test/: BUILD  HelloTest.java  docker-compose.yml
examples/pre-compose-up-script-test/: BUILD  docker-compose.yml
examples/pre-compose-up-script-test/src/test/resources/: .gitignore  setup_test.sh
